Fixed image on small screens

--- a/src/sass/components/_preview.scss
+++ b/src/sass/components/_preview.scss
@@ -10,17 +10,14 @@
 
 	&__image {
 		width: 100%;
-		min-height: 100%;
+		max-height: 12.5em;
 		object-fit: cover;
 		object-position: center;
 		border-radius: 0.75em 0.75em 0 0;
 
-		@media (max-width: 52em) {
-			max-height: 12.5em;
-		}
-
 		@media (min-width: 52em) {
 			border-radius: 0.75em 0 0 0.75em;
+			min-height: 100%;
 		}
 	}
 
